--- a/test.html
+++ b/test.html
@@ -1,15 +1,13 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <body>
-    <script>
-      // Note: globals expected by React and React Testing Library
-      // not sure why they must be here, instead of in test.js
-      global = window;
-      process = {
-        env: {}
-      };
+   <!-- <script type="module">
+      import "mocha";
+      mocha.setup({ ui: "bdd" });
     </script>
+    <script type="module">
+      const modules = import.meta.globEager("/src/**/*.test.{js,jsx}");
+    </script> -->
     <script type="module" src="/mocha-setup.js"></script>
     <script type="module" src="/test-loader.js"></script>
   </body>
